--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "English-gulp",
+  "name": "english-gulp",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,16 +10,7 @@
   "author": "Den",
   "license": "ISC",
   "browserslist": [
-    "> 1%",
-    "ie >= 8",
-    "edge >= 15",
-    "ie_mob >= 10",
-    "ff >= 45",
-    "chrome >= 45",
-    "safari >= 7",
-    "opera >= 23",
-    "ios >= 7",
-    "android >= 4"
+    "> 1%"
   ],
   "devDependencies": {
     "browser-sync": "^2.27.5",
@@ -30,7 +21,8 @@
     "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^5.0.0",
     "gulp-uglify-es": "^3.0.0",
-    "sass": "^1.38.0"
+    "sass": "^1.38.0",
+    "webpack-stream": "^7.0.0"
   },
   "dependencies": {
     "aos": "^2.3.4",
